# langnav

./: .gitattributes  .gitignore  =0.29.0  LICENSE  Makefile  README.md  requirements.txt  setup.cfg
.claude/: settings.local.json
.github/workflows/: ci.yml
configs/: ppo_nav.yaml  wandb_sweep.yaml
demo/: eval_results.json
docker/: Dockerfile  Dockerfile.sim  docker-compose.sim.yml  docker-compose.yml  entrypoint.sh
langnav/ros2_ws/src/langnav_robot/: package.xml  setup.py
langnav/ros2_ws/src/langnav_robot/langnav_core/: __init__.py  nav_node.py
langnav/ros2_ws/src/langnav_robot/langnav_rl/: __init__.py  callbacks.py  nav_env.py  ppo_trainer.py  renderer.py
langnav/ros2_ws/src/langnav_robot/langnav_sim/: __init__.py  gazebo_env.py
langnav/ros2_ws/src/langnav_robot/langnav_sim/launch/: gazebo.launch.py
langnav/ros2_ws/src/langnav_robot/langnav_sim/urdf/: turtlebot3_langnav.urdf
langnav/ros2_ws/src/langnav_robot/langnav_sim/worlds/: langnav_room.world  world_generator.py
langnav/ros2_ws/src/langnav_robot/langnav_vision/: __init__.py  clip_encoder.py  vision_obs_builder.py  vision_pipeline.py  yolo_detector.py
scripts/: record_demo.py  train_model.py
tests/: test_nav_env.py  test_renderer.py  test_sim.py  test_vision_obs_builder.py  test_vision_pipeline.py
